lib/src/compiler/tests/testdata/errors/68.out
error[E001]: syntax error
 --> line:1:19
  |
1 | rule test { meta: condition: true }
  |                   ^^^^^^^^^ expecting identifier, found `condition`
  |